--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 h1,h2,h3 {
     font-family:'Lugatype', sans-serif;
-    font-weight: 90px;
+    font-weight: 90%;
     font-size: 4.5em;
 }
 #seconds, .dots, #tens  {
